--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cafe</title>
+    <title>Cup Café</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/index.css">
@@ -17,16 +17,22 @@
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="index.html">About</a></li>
-                <li><a href="menu.html">Menu</a></li>
+                <li><a href="index.html">Locations</a></li>
                 <li><a href="products.html">Products</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="contacts.html">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section class="hero">
-            
+        <section class="hero-container">
+            <div class="hero-cafe">
+                <h1>CUP CAFÉ</h1>
+                <h2>BEST <span>COFFEE</span> IN THE UK</h2>
+                <button class="btn-1" href="index.html">LOCATIONS</button>
+                <button class="btn-2" href="index.html">VIEW PRODUCTS</button>
+            </div>
+            <img class="coffee-img" src="/Images/Coffee.png">
         </section>
     </main>
 
