about us with imgs + spacing navbar change

--- a/index.html
+++ b/index.html
@@ -29,10 +29,24 @@
             <div class="hero-cafe">
                 <h1>CUP CAFÉ</h1>
                 <h2>BEST <span>COFFEE</span> IN THE UK</h2>
-                <button class="btn-1" href="index.html">LOCATIONS</button>
-                <button class="btn-2" href="index.html">VIEW PRODUCTS</button>
+                <div class="btn-container">
+                    <button class="btn-1" href="index.html">LOCATIONS</button>
+                    <button class="btn-2" href="products.html">VIEW PRODUCTS</button>
+                </div>
             </div>
-            <img class="coffee-img" src="/Images/Coffee.png">
+            <img class="coffee-img" src="/Images/Coffee.png" alt="floating coffee with coffee beans">
+        </section>
+
+        <section class="about-container">
+                <div class="about-us">
+                    <h2>About Cup Cafe</h2>
+                    <p>Welcome to Cup Café, your cozy neighborhood spot for the best coffee in the UK. Whether you're starting your day with a rich espresso, relaxing with a smooth latte, or indulging in one of our delicious pastries, we promise to make every visit a delightful experience. At Cup Café, we are passionate about serving only the finest coffee, sourced from the best beans around the world and expertly brewed to perfection.<br><br> Our warm and inviting atmosphere is perfect for catching up with friends, getting some work done, or simply enjoying a moment of peace. Come and see why we're the go-to place for coffee lovers across the country!</p>
+                </div>
+                <div class="about-img-container">
+                    <img src="/Images/aboutIMG1.jpg" alt="coffee art">
+                    <img src="/Images/aboutIMG2.jpg" alt="coffee with macarons">
+                    <img src="/Images/aboutIMG3.jpg" alt="inside cafe">
+                </div>
         </section>
     </main>
 
