--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cup Café</title>
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/index.css">
 </head>
@@ -55,12 +56,12 @@
                 <div class="location">
                     <img src="/Images/location1.jpg" alt="Brighton Cafe"> 
                     <div class="overlay">Monday - Friday<br>8am - 4pm<br><br>Saturday - Sunday<br>9am - 5pm</div>
-                    <h3>Brighton</h3>
+                    <h3>Cardiff</h3>
                 </div>
                 <div class="location">
                     <img src="/Images/location2.jpg" alt="Cardiff Cafe">
                     <div class="overlay">Monday - Friday<br>8:30am - 5pm<br><br>Saturday - Sunday<br>9am - 5pm</div>
-                    <h3>Cardiff</h3>
+                    <h3>Brighton</h3>
                 </div>
                 <div class="location">
                     <img src="/Images/location3.jpg" alt="London Cafe">
@@ -69,9 +70,51 @@
                 </div>
             </div>
         </section>
+
     </main>
 
     <footer>
+
+        <section class="footer-container">
+
+            <div class="open-hours">
+                <h4>Open Hours</h4>
+                <div class="open-hour-locations">
+                    <div class="hours">
+                        <h5>Cardiff</h5>
+                        <p>Monday - Friday<br>8am - 4pm<br><br>Saturday - Sunday<br>9am - 5pm</p>
+                    </div>
+                    <div class="hours"> 
+                        <h5>Brighton</h5>
+                        <p>Monday - Friday<br>8:30am - 5pm<br><br>Saturday - Sunday<br>9am - 5pm</p>
+                    </div>
+                    <div class="hours">
+                        <h5>London</h5>
+                        <p>Monday - Friday<br>8am - 4pm<br><br>Saturday - Sunday<br>7:30am - 5pm</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="social-media">
+                <h4>Socials</h4>
+                <div class="social-items">
+                    <i class="fa-brands fa-instagram fa-2xl" style="color: #FFF;"></i>
+                    <p><a href="https://www.instagram.com/" target="_blank">Instagram</a></p>
+                </div>
+                <div class="social-items">
+                    <i class="fa-brands fa-facebook fa-2xl" style="color: #FFF;"></i>
+                    <p><a href="https://www.facebook.com/" target="_blank">FaceBook</a></p>
+                </div>
+                <div class="social-items">
+                    <i class="fa-brands fa-youtube fa-2xl" style="color: #FFF;"></i>
+                    <p><a href="https://www.youtube.com/" target="_blank">YouTube</a></p>
+                </div>
+            </div>
+
+        </section>
+
+        <p class="copyright">&copy;Copyright 2024 Cup Café. All rights reserved.</p>
+
     </footer>
     <script src="js/main.js"></script>
 </body>
