contact page with reset submit + started products page

--- a/products.html
+++ b/products.html
@@ -3,12 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cafe</title>
+    <title>Cup Café</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/products.css">
 </head>
 <body>
-    
+
+    <header>
+        <img class="logo" src="Images/Cafelogo.png" alt="logo">
+        <nav>
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html#about-container">About</a></li>
+                <li><a href="index.html#locations-container">Locations</a></li>
+                <li><a href="products.html">Products</a></li>
+                <li><a href="contacts.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section>
+            
+        </section>
+    </main>
+
 </body>
 </html>
