--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 <h1>CUP CAFÉ</h1>
                 <h2>BEST <span>COFFEE</span> IN THE UK</h2>
                 <div class="btn-container">
-                    <button class="btn-1">LOCATIONS</button>
-                    <button class="btn-2">VIEW PRODUCTS</button>
+                    <button id="btn-1" class="btn-1">LOCATIONS</button>
+                    <button id="btn-2" class="btn-2">VIEW PRODUCTS</button>
                 </div>
             </div>
             <img class="coffee-img" src="/Images/Coffee.png" alt="floating coffee with coffee beans">
@@ -74,9 +74,7 @@
     </main>
 
     <footer>
-
         <section class="footer-container">
-
             <div class="open-hours">
                 <h4>Open Hours</h4>
                 <div class="open-hour-locations">
@@ -110,12 +108,10 @@
                     <p><a href="https://www.youtube.com/" target="_blank">YouTube</a></p>
                 </div>
             </div>
-
         </section>
-
-        <p class="copyright">&copy;Copyright 2024 Cup Café. All rights reserved.</p>
-
+        <p class="copyright">&copy;Copyright 2024 Cup Café. All rights reserved.<br><br><a href="index.html">Back to Top</a></p>
     </footer>
+    
     <script src="js/main.js"></script>
 </body>
 </html>
