added media queries + alt image tags

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <section id="about-container">
                 <div class="about-us">
-                    <h2>About Cup Cafe</h2>
+                    <h2>About Cup Café</h2>
                     <p>Welcome to Cup Café, your cozy neighborhood spot for the best coffee in the UK. Whether you're starting your day with a rich espresso, relaxing with a smooth latte, or indulging in one of our delicious pastries, we promise to make every visit a delightful experience. At Cup Café, we are passionate about serving only the finest coffee, sourced from the best beans around the world and expertly brewed to perfection.<br><br> Our warm and inviting atmosphere is perfect for catching up with friends, getting some work done, or simply enjoying a moment of peace. Come and see why we're the go-to place for coffee lovers across the country!</p>
                 </div>
                 <div class="about-img-container">
