--- a/products.html
+++ b/products.html
@@ -30,21 +30,21 @@
                 <h2>Drinks</h2>
                 <div class="products">
                     <div class="product">
-                        <img src="/Images/espresso.jpg">
+                        <img src="/Images/espresso.jpg" alt="espresso">
                         <div class="product-info">
                             <p>Espresso</p>
                             <button>More Info</button>
                         </div>
                     </div>
                     <div class="product">
-                        <img src="/Images/icedLatte.jpg">
+                        <img src="/Images/icedLatte.jpg" alt="iced latte">
                         <div class="product-info">
                             <p>Iced Latte</p>
                             <button>More Info</button>
                         </div>
                     </div>
                     <div class="product">
-                        <img src="/Images/matchaGreenTea.jpg">
+                        <img src="/Images/matchaGreenTea.jpg" alt="matcha Green Tea">
                         <div class="product-info">
                             <p>Matcha Green Tea</p>
                             <button>More Info</button>
@@ -57,21 +57,21 @@
                 <h2>Pastries</h2>
                 <div class="products">
                     <div class="product">
-                        <img src="/Images/croissant.jpg">
+                        <img src="/Images/croissant.jpg" alt="croissant">
                         <div class="product-info">
                             <p>Croissant</p>
                             <button>More Info</button>
                         </div>
                     </div>
                     <div class="product">
-                        <img src="/Images/blueberryMuffin.jpg">
+                        <img src="/Images/blueberryMuffin.jpg" alt="blueberry Muffin">
                         <div class="product-info">
                             <p>Blueberry Muffin</p>
                             <button>More Info</button>
                         </div>
                     </div>
                     <div class="product">
-                        <img src="/Images/chocolateEclair.jpg">
+                        <img src="/Images/chocolateEclair.jpg" alt="chocolate Eclair">
                         <div class="product-info">
                             <p>Chocolate Eclair</p>
                             <button>More Info</button>
@@ -84,21 +84,21 @@
                 <h2>Breakfast</h2>
                 <div class="products">
                     <div class="product">
-                        <img src="/Images/avocadoToast.jpg">
+                        <img src="/Images/avocadoToast.jpg" alt="avocado Toast">
                         <div class="product-info">
                             <p>Avocado Toast</p>
                             <button>More Info</button>
                         </div>
                     </div>
                     <div class="product">
-                        <img src="/Images/yogurtParfait.jpg">
+                        <img src="/Images/yogurtParfait.jpg" alt="yogurt Parfait">
                         <div class="product-info">
                             <p>Yogurt Parfait</p>
                             <button>More Info</button>
                         </div>
                     </div>
                     <div class="product">
-                        <img src="/Images/omelette.jpg">
+                        <img src="/Images/omelette.jpg" alt="omelette">
                         <div class="product-info">
                             <p>Omelette</p>
                             <button>More Info</button>
